feat(app): app functionality

--- a/src/templates/template.prefix.html
+++ b/src/templates/template.prefix.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>RSSFeeds</title>
-  </head>
-  <body>
-    <h1>Grunt Watch Works!</h1>
+<html ng-app="rssfeeds" class="app" ng-controller="mainCtrl">
+
+<head>
+  <meta charset="utf-8">
+  <title>RSSFeeds</title>
+  <link rel="stylesheet" href="css/app.css">
+</head>
+
+<body>
