--- a/src/templates/template.suffix.html
+++ b/src/templates/template.suffix.html
@@ -1,2 +1,6 @@
-  </body>
+<script src="/socket.io/socket.io.js"></script>
+<script src="js/vendor.js"></script>
+<script src="js/app.js"></script>
+</body>
+
 </html>
