fix(css): properly display on lower screen resolutions

--- a/src/templates/html/body.html
+++ b/src/templates/html/body.html
@@ -28,7 +28,7 @@
                   <span class="glyphicon glyphicon-chevron-up text-danger"></span>
                 </button>
                 <button type="button" class="btn btn-default rss-btn-likes">
-                  <span class="h4 text-dark">{{feed.likes}}</span>
+                  <span class="h4 text-dark font-bold">{{feed.likes}}</span>
                 </button>
               </div>
             </div>
