--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2904,6 +2904,8 @@ html, body {
 }
 .rss-panel {
   border: none !important;
+  -webkit-box-shadow: none;
+	box-shadow: none;
 }
 .rss-btn-likes {
   cursor: default;
